src/objects/bupl__BP_Need__c.object
<CustomObject>
    <fields>
        <fullName>acpl__gf_account_planning_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Planning</label>
        <referenceTo>acpl__Account_Planning__c</referenceTo>
        <relationshipLabel>Needs</relationshipLabel>
        <relationshipName>Needs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bupl__country_id__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arab Emirates</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Compass</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>NY</fullName>
                </value>
                <value>
                    <fullName>Paraguay</fullName>
                </value>
                <value>
                    <fullName>Peru</fullName>
                </value>
                <value>
                    <fullName>Portugal</fullName>
                </value>
                <value>
                    <fullName>Puerto Rico</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>South Korea</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>Uruguay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bupl__gf_bus_pl_cust_lock_desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pain point details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bupl__gf_bus_pl_cust_lock_name__c</fullName>
        <label>Pain Points</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insufficient credit lines</fullName>
                </value>
                <value>
                    <fullName>Lack of product capabilities</fullName>
                </value>
                <value>
                    <fullName>High competition on pricing</fullName>
                </value>
                <value>
                    <fullName>Legal issues pending to be solved</fullName>
                </value>
                <value>
                    <fullName>Our timing is out of the market</fullName>
                </value>
                <value>
                    <fullName>Lack of Strategic dialogue</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bupl__gf_bus_pl_sales_goal_desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Need details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bupl__gf_bus_pl_sales_goal_name__c</fullName>
        <label>Need</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Increase credit lines</fullName>
                </value>
                <value>
                    <fullName>Increase guarantees lines</fullName>
                </value>
                <value>
                    <fullName>Increase industry asset allocation</fullName>
                </value>
                <value>
                    <fullName>Increase country risk limits</fullName>
                </value>
                <value>
                    <fullName>Build new product capabilities</fullName>
                </value>
                <value>
                    <fullName>More aggresive pricing strategy</fullName>
                </value>
                <value>
                    <fullName>Increase execution speed</fullName>
                </value>
                <value>
                    <fullName>Improve internal coordination</fullName>
                </value>
                <value>
                    <fullName>BBVA Senior Management support</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bupl__gf_bus_pl_unlk_revenue_amount__c</fullName>
        <label>Potential Revenue Increase</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>bupl__gf_bus_pl_unlk_risk_lim_amount__c</fullName>
        <label>Risk Limit Increase</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>bupl__gf_business_lock_record_number__c</fullName>
        <label>Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bupl__gf_business_plan_id__c</fullName>
        <label>Business Plan</label>
        <referenceTo>bupl__BusinessPlan__c</referenceTo>
        <relationshipLabel>Needs</relationshipLabel>
        <relationshipName>Needs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>bupl__gf_business_plan_lock_name__c</fullName>
        <formula>HYPERLINK( &quot;/lightning/r/Need__c/&quot; + Id + &quot;/view&quot;,&quot;Need - &quot; + TEXT(bupl__gf_business_lock_record_number__c) + &quot; &quot; +bupl__gf_business_plan_id__r.bupl__participant_id__r.Name,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <label>Need</label>
    <nameField>
        <displayFormat>BPNeed-{0}</displayFormat>
        <label>Needs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Needs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>